--- a/Website.html
+++ b/Website.html
@@ -6,7 +6,7 @@
     <div style="background-color:black">
 
         <head>
-            <title>Come  in</title>
+            <title>Come on in</title>
         </head>
         <h1>Hello, I am Kylen!</h1>
 
@@ -64,7 +64,7 @@
 </iframe>
 
 <audio controls>
-    <source src="actually%20song.mp3" type="audio/mp3">
+    <source src="actually%20song.mp3" type="audio/mpeg">
 </audio>
 
 <body>
