--- a/Website.html
+++ b/Website.html
@@ -64,15 +64,12 @@
 </iframe>
 
 <audio controls>
-    <source src="actually%20song.mp3" type="audio/mpeg">
+    <source src="actually%20song.mp3" type="audio/mp3">
 </audio>
 
-<body>
-    <p>
-        <a href="file:///C:/Users/Chook/Downloads/Report.pdf">My Report</a>
-    </p>
-</body>
-
-    <object data="actually song.mp3"></object>
+    
+    <a href="Report.pdf">Fields Report</a> 
+    
+    <form method="post" action="createpdf/" target="_blank">
 
 </html>
