--- a/Website.html
+++ b/Website.html
@@ -68,7 +68,7 @@
 </audio>
 
     
-    <a href="Report.pdf">Fields Report</a> 
+    <embed src="Report.pdf" width="1920px" height="1000px">
     
     <form method="post" action="createpdf/" target="_blank">
 
