--- a/Website.html
+++ b/Website.html
@@ -51,7 +51,6 @@
 
     ctx.fillStyle = grd;
     ctx.fillRect(20, 20, 200, 200);
-
 </script>
 
 
@@ -59,11 +58,13 @@
     <polygon points="300,10 200, 100, 100 100, 100 200, 150" style="fill:gold;stroke:blue;stroke-width:20;fill-rule:evenodd;" />
 </svg>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/4PWPfoirrzI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 
-</iframe>
+<video width="320" Height="240" controls>
+    <source src="TimeTree.mp4" type="video/mp4">
+</video>
 
-<a href="https://drive.google.com/open?id=1zLPF7SdOqY7pbMm4GXROdC_a-7_B2e6p">Field Report</a>
-<a href="https://drive.google.com/open?id=1iwmc8tQguiUHqprQMq-fHUuTV5VWbwna">Audio File</a>
+<audio controls>
+    <source src="actually song.mp3" type="audio/mp3">
+</audio>
 
 </html>
