--- a/Website.html
+++ b/Website.html
@@ -67,6 +67,8 @@
     <source src="actually song.mp3" type="audio/mp3">
 </audio>
 
-    <a href="https://scratch.mit.edu/projects/283390636/">Scratch Project</a>    
+    <a href="https://scratch.mit.edu/projects/283390636/">Scratch Project</a>   
+    
+    <a href="https://www.linkedin.com/in/kylenbregula/">Scratch Project</a>    
     
 </html>
