--- a/Website.html
+++ b/Website.html
@@ -69,6 +69,6 @@
 
     <a href="https://scratch.mit.edu/projects/283390636/">Scratch Project</a>   
     
-    <a href="https://www.linkedin.com/in/kylenbregula/">Scratch Project</a>    
+    <a href="https://www.linkedin.com/in/kylenbregula/">Linkedin Profile</a>    
     
 </html>
