--- a/Website.html
+++ b/Website.html
@@ -74,7 +74,7 @@
 	
 	<td width="10px" height="100px">
 						<button style="float: right" onclick="loginfunction()">
-							Press here</button>
+							Mystery Button </button>
 						<img height="280%" style="float: right;" src="https://i.imgur.com/ToXGZhS.jpg" alt="Unavailable">
 					</td>
     <script>
@@ -82,7 +82,7 @@
 			function loginfunction() {
 			alert("Hi there, Welcome to the website!");
 				alert("Do you wanna play a game? 'gsvvigx'");
-				alert("'gsvvigx' = 'correct' (correct + 4 for each letter)");
+				alert("'gsvvigx' = 'correct' (correct + 4)");
 			}
 		 
     </script>
