--- a/Website.html
+++ b/Website.html
@@ -87,4 +87,7 @@
 		 
     </script>
     
+	
+	<embed src="Kylen Bregula's Field Report .pdf" type="application/pdf" width="100%" height="600px" />
+	
 </html>
