--- a/Website.html
+++ b/Website.html
@@ -81,6 +81,9 @@
        
 			function loginfunction() {
 			alert("Hi there, Welcome to the website!");
+		        alert("what do you do when you see a space man?
+				let name= prompt("answer");
+			alert("You park the car man");
 				alert("Do you wanna play a game? 'gsvvigx'");
 				alert("'gsvvigx' = 'correct' (correct + 4)");
 			}
