--- a/Website.html
+++ b/Website.html
@@ -85,7 +85,7 @@
 				let name= prompt("answer");
 			alert("You park the car man");
 				alert("Do you wanna play a game? 'gsvvigx'");
-				alert("'gsvvigx' = 'correct' (correct + 4)");
+				alert("'gsvvigx' = 'correct');
 			}
 		 
     </script>
