--- a/Website.html
+++ b/Website.html
@@ -87,7 +87,8 @@
 			}
 		</script>
 	
-    
+    <p> Everything within this website is something that I was told to do and I tried my best in order to create something that followed up to standards. All the coding is based on what I have learned through the course and I did this as I am stil learning this program and hopefully in the neat future I can create more advanced coding that will please the eye. 
+	</p>
 	
 	<embed src="Kylen Bregula's Field Report .pdf" type="application/pdf" width="100%" height="600px" />
 	
