--- a/Website.html
+++ b/Website.html
@@ -79,11 +79,11 @@
 					</td>
 <script>
 			function loginfunction() {
-			alert("Hello, what do you do when you see a space man?);
-			let joke= prompt("Answer the joke");
-			alert("you park the car man);
-				alert("Can you figure out my caesar cipher? 'gsvvigx'");
-				alert("'gsvvigx' = 'correct' (add 4)");
+			alert("Hello, welcome to JadenW.com");
+			let name= prompt("Insert name here.");
+			alert("Hello there, " + name);
+				alert("Can you figure out my caesar cipher? 'utwyktqnt'");
+				alert("'utwyktqnt' = 'portfolio' (portfolio + 5 for each letter)");
 			}
 		</script>
 	
